@@ -48,7 +48,7 @@ import java.util.logging.Level;
 import org.netbeans.modules.subversion.remote.Subversion;
 import org.netbeans.modules.subversion.remote.api.SVNRevision;
 import org.netbeans.modules.subversion.remote.api.SVNUrl;
-import org.netbeans.modules.subversion.remote.config.Scrambler;
+import org.netbeans.modules.remotefs.versioning.api.Scrambler;
 import org.netbeans.modules.subversion.remote.util.SvnUtils;
 import org.openide.util.NbBundle;
 
@@ -217,7 +217,7 @@ public class RepositoryConnection {
     private void parseUrlString(String urlString) throws MalformedURLException {
         int idx = urlString.lastIndexOf('@');
         int hostIdx = urlString.indexOf("://");                         // NOI18N
-        int firstSlashIdx = urlString.indexOf("/", hostIdx + 3);        // NOI18N
+        int firstSlashIdx = urlString.indexOf('/', hostIdx + 3);        // NOI18N
         if (urlString.contains("\\")) { //NOI18N
             throw new MalformedURLException(NbBundle.getMessage(Repository.class, "MSG_Repository_InvalidSvnUrl", urlString)); //NOI18N
         }
@@ -322,9 +322,9 @@ public class RepositoryConnection {
                 certPassword == null ? null : certPassword.toCharArray(), portNumber);
     }
 
-    private static String ripUserFromHost (String hostname) {
+    private static synchronized String ripUserFromHost (String hostname) {
         if (keepUserInHostname == null) {
-            keepUserInHostname = new Boolean("false".equals(System.getProperty("subversion.ripUserFromHostnames", "true"))); //NOI18N
+            keepUserInHostname = Boolean.valueOf("false".equals(System.getProperty("subversion.ripUserFromHostnames", "true"))); //NOI18N
         }
         return keepUserInHostname.booleanValue() ? hostname : SvnUtils.ripUserFromHost(hostname);
     }
